--- a/src/styles/login.scss
+++ b/src/styles/login.scss
@@ -40,6 +40,7 @@
             width: 100%;
             height: 100%;
             padding: 5px;
+            text-align: center;
 
             .input {
                 // background-color: white;
@@ -47,6 +48,16 @@
                 height: 40px;
                 margin: auto
             }
+
+            label{
+               color: white;
+               font-size: 25px;
+               
+              
+            }
+            #eyeicon{
+                padding-left: 0px;
+               }
         }
 
         .clickbtn {
